# stepit

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  foxglove bridge.md  info.txt  stepit.repos  trajectory_command.txt
cobs_serial/: CMakeLists.txt  package.xml
cobs_serial/include/cobs_serial/: buffer.hpp  cobs_serial.hpp  cobs_serial_factory.hpp  crc_utils.hpp  data_interface.hpp  data_utils.hpp  default_cobs_serial.hpp  default_cobs_serial_factory.hpp  default_data_interface.hpp  default_serial.hpp  default_serial_factory.hpp  serial.hpp  serial_exception.hpp  (+1 more)
cobs_serial/src/: crc_utils.cpp  data_utils.cpp  default_cobs_serial.cpp  default_cobs_serial_factory.cpp  default_data_interface.cpp  default_serial.cpp  default_serial_factory.cpp
cobs_serial/tests/: CMakeLists.txt  test_crc_utils.cpp  test_data_utils.cpp  test_default_cobs_serial.cpp  test_default_data_interface.cpp
data_interface/: CMakeLists.txt  package.xml
data_interface/src/: crc_utils.cpp  data_handler.cpp  data_utils.cpp  default_data_interface.cpp  default_serial.cpp  default_serial_interface.cpp  serial_handler.cpp
data_interface/tests/: CMakeLists.txt  test_crc_utils.cpp  test_data_handler.cpp  test_data_utils.cpp  test_default_data_interface.cpp
freezer_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
freezer_controller/src/: freezer_controller.cpp
freezer_controller/tests/: CMakeLists.txt
freezer_description/: CMakeLists.txt  package.xml
freezer_description/config/: controllers.yaml
freezer_description/launch/: robot.launch.py
freezer_description/urdf/: freezer.ros2_control.xacro  freezer.sample_robot.xacro  freezer.urdf.xacro  freezer.xacro
freezer_driver/: CMakeLists.txt  hardware_interface.xml  package.xml
freezer_driver/src/: default_driver.cpp  default_driver_factory.cpp  freezer_hardware.cpp
freezer_driver/tests/: CMakeLists.txt  test_default_driver_factory.cpp  test_freezer_hardware.cpp
freezer_hardware_tests/: CMakeLists.txt  package.xml
freezer_hardware_tests/src/: command_line_utility.hpp  common_utils.hpp  echo.cpp  execute_sequence.cpp
freezer_msgs/: CMakeLists.txt  package.xml
freezer_msgs/srv/: SetIO.srv
src/robot_bringup/: CMakeLists.txt  package.xml
src/stepit_bringup/: CMakeLists.txt  package.xml
src/stepit_hardware/: CMakeLists.txt  hardware_interface.xml  package.xml
stepit_control/: CMakeLists.txt  package.xml  stepit_control.xml
stepit_control/docs/: class_diagram.uxf
stepit_control/src/: command_handler.cpp  crc_utils.cpp  data_handler.cpp  data_utils.cpp  main.cpp  serial_handler.cpp  stepit_control.cpp
stepit_control/tests/: CMakeLists.txt  test_command_handler.cpp  test_crc_utils.cpp  test_data_handler.cpp  test_data_utils.cpp  test_fake_motor.cpp  test_stepit_control.cpp
stepit_description/: CMakeLists.txt  README.md  package.xml
stepit_description/config/: controllers.yaml
stepit_description/controllers/: controllers.yaml
stepit_description/docs/: README.md
stepit_description/launch/: bringup.launch.py  robot.launch.py  stepit.rviz
stepit_description/meshes/: README.md  cylinder.blend.tar.xz  cylinder.dae  stepper_3.dae  stepper_5.dae
stepit_description/rviz/: stepit.rviz
stepit_description/urdf/: README.md  stepit.ros2_control.xacro  stepit.urdf.xacro  stepit.xacro
stepit_driver/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py  stepit_driver
stepit_driver/config/: logitech.config.yaml
stepit_driver/docs/: class_diagram.uxf
stepit_driver/launch/: teleop.launch.py
stepit_driver/src/: crc_utils.cpp  data_buffer.cpp  data_interface.cpp  data_utils.cpp  default_driver.cpp  default_driver_factory.cpp  main.cpp  motor_move_to_command.cpp  motor_status.cpp  request.cpp  response.cpp  serial_interface.cpp  stepit_hardware.cpp  velocity_driver_main.cpp  velocity_driver_node.cpp
stepit_driver/test/: crc_utils_test.cpp  data_interface_test.cpp  data_utils_test.cpp  mock_serial.h
stepit_driver/tests/: CMakeLists.txt  test_default_driver.cpp  test_fake_motor.cpp  test_stepit_hardware.cpp
stepit_hardware/: CMakeLists.txt  package.xml  stepit_hardware.xml
stepit_hardware/docs/: C++ notes.txt  class_diagram.uxf  nodes.uxf
stepit_hardware/src/: command_handler.cpp  command_handler_factory.cpp  command_interface.cpp  crc_utils.cpp  data_buffer.cpp  data_handler.cpp  data_interface.cpp  data_utils.cpp  default_driver.cpp  default_driver_factory.cpp  default_request_interface.cpp  default_request_interface_factory.cpp  hardware_interface.cpp  main.cpp  motor_move_to_command.cpp  motor_move_to_command.hpp  motor_status.cpp  position_control.cpp  request.cpp  request.hpp  request_interface_factory.cpp  response.cpp  response.hpp  serial_handler.cpp  serial_interface.cpp  serial_interface_impl.cpp  stepit_hardware.cpp  stepit_hardware_impl.cpp  velocity_control.cpp
stepit_hardware/test/: CMakeLists.txt  command_interface_test.cpp  crc_utils_test.cpp  custom_actions.h  data_interface_test.cpp  data_utils_test.cpp  mock_serial.h  mock_serial_interface.h  test_crc_utils.cpp  test_data_interface.cpp  test_data_utils.cpp  test_load_stepit_hardware.cpp  test_stepit_hardware.cpp
stepit_hardware/tests/: CMakeLists.txt  mock_command_interface.hpp  mock_data_interface.hpp  mock_serial.hpp  mock_serial_interface.hpp  test_command_handler.cpp  test_crc_utils.cpp  test_data_handler.cpp  test_data_interface.cpp  test_data_utils.cpp  test_default_driver.cpp  test_default_request_interface.cpp  test_fake_motor.cpp  test_stepit_hardware.cpp
stepit_hardware_tests/: CMakeLists.txt  package.xml
stepit_hardware_tests/src/: command_line_utility.cpp  command_line_utility.hpp  get_status.cpp
stepit_hardware_tests/tests/: CMakeLists.txt  stepit_hardware_info.hpp  test_data_interface.cpp  test_real_hardware.cpp  test_stepit_hardware.cpp  test_utils.hpp
stepit_teleop/: CMakeLists.txt  README.md  package.xml
stepit_teleop/config/: logitech.config.yaml
stepit_teleop/launch/: teleop.launch.py
stepit_teleop/src/: velocity_teleop_main.cpp  velocity_teleop_node.cpp
(+539 files in other folders)
