<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freezer_msgs</name>
  <version>0.0.0</version>
  <description>
        Actions, services and messages to communicate with Freezer Controller.
    </description>
  <maintainer email="g.remigi@kineticsystem.org">Giovanni Remigi</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generate action, services, or message interfaces. -->
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required by packages installing action, services, or message interfaces. -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
